Closed Bug 1510942 Opened 7 years ago Closed 7 years ago

No caret in formula bar of Google sheets (mispositioned caret)

Categories

(Core :: Web Painting, defect, P3)

Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: alice0775, Assigned: emilio)

References

Details

(Keywords: parity-chrome, parity-edge, Whiteboard: [dupe me])

Attachments

(2 files)

Reproducible the issue on Firefox, but not on Edge and Chrome. Steps To Reproduce: 1. Logged in Google 2. Open https://docs.google.com/spreadsheets/ And start a new spreadsheet 3. Click on empty field of formula bar(fx) Actual Results: No caret display, but I can type characters. Expected Results: Caret should be blinking.
Keywords: parity-chrome
Is this a recent regression? I suspect it may have regressed with bug 1506547.
Attached file Testcase.
Not a regression, but slightly bizarre bug. If you remove the overflow: hidden ancestor you can see that the caret is mispositioned.
Status: UNCONFIRMED → NEW
Ever confirmed: true
See Also: → 904846
Summary: No caret in formula bar of Google sheets → No caret in formula bar of Google sheets (mispositioned caret)
I can see what's going wrong.
Assignee: nobody → emilio
Component: Layout → Web Painting
This is consistent with what we do for non-stacking-contexts. The GetCaretFrame() == child check may be able to go away, I'm not sure, so I've left it for now.
(In reply to Alice0775 White from comment #4) > Regression window with the attachment 9028583 [details]: > > https://hg.mozilla.org/mozilla-central/ > pushloghtml?fromchange=f7c89de3ab43&tochange=3f0587ce1774 -> bug 788044, fairly sure.
Blocks: 788044
Status: NEW → ASSIGNED
Priority: -- → P3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1894e5ca0523 Fix the position of the caret when the caret frame is a reference frame. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
QA Whiteboard: [good first verify]

I can reproduce this issue with 65.0a1 (2018-11-29) (64-bit) in Linux x86_64

I am verifying that this issue is now fixed in latest beta 65.0b10

Build ID: 20190110221328
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0

QA Whiteboard: [good first verify] → [good first verify][testday-20190111]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: