Bug 1510942 - Fix the position of the caret when the caret frame is a reference frame. r=mattwoodrow

This is consistent with what we do for non-stacking-contexts. The
GetCaretFrame() == child check may be able to go away, I'm not sure, so I've
left it for now.

Differential Revision: https://phabricator.services.mozilla.com/D13384

--HG--
extra : moz-landing-system : lando